--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <p>Descarga <a href="https://code.visualstudio.com/">Visual Studio Code</a> y <a href="https://git-scm.com/">Git</a>.</p>
                 </section>
                 <!-- Añade más secciones según el tutorial -->
+                <a href="Publica_tu_web_en_GitHub.html">Haz clic para ver la Versión completa</a>
             </main>
         </body>
         </html>
