--- a/Publica_tu_web_en_GitHub.html
+++ b/Publica_tu_web_en_GitHub.html
@@ -365,6 +365,7 @@ code {
           : 'default'
     });
   </script>
+<h1 id="publica-tu-p%C3%A1gina-web-en-github">Publica tu página web en Github</h1>
 <p>Hoy en día, la mayoría de las publicaciones se hacen en lasredes sociales. Cada vez se usan menos los blogs, y las páginas web propias en general.</p>
 <p>Pero desde <a href="http://blog.elcacharreo.com">El Cacharreo</a> queremos reivindicar la publicación de contenidos por nosotros mismos, controlando todo el proceso.</p>
 <p>Las redes sociales son un buen escaparate, pero hay demasiadas cosas que no controlamos:</p>
