--- a/Publica_tu_web_en_GitHub.html
+++ b/Publica_tu_web_en_GitHub.html
@@ -100,8 +100,8 @@ body.showEditorSelection li.code-line:hover:before {
 }
 
 img {
-	max-width: 100%;
-	max-height: 100%;
+	max-width: 80%;
+	max-height: 80%;
 }
 
 a {
@@ -225,6 +225,8 @@ pre code {
 }
 
 </style>
+
+<link rel="stylesheet" href="styles.css">
 
 <style>
 /* Tomorrow Theme */
@@ -365,8 +367,8 @@ code {
           : 'default'
     });
   </script>
-<h1 id="publica-tu-p%C3%A1gina-web-en-github">Publica tu página web en Github</h1>
-<p>Hoy en día, la mayoría de las publicaciones se hacen en lasredes sociales. Cada vez se usan menos los blogs, y las páginas web propias en general.</p>
+<h1 id="publica-tu-p%C3%A1gina-web-en-github-v13">Publica tu página web en Github v1.3</h1>
+<p>Hoy en día, la mayoría de las publicaciones se hacen en las redes sociales. Cada vez se usan menos los blogs, y las páginas web propias en general.</p>
 <p>Pero desde <a href="http://blog.elcacharreo.com">El Cacharreo</a> queremos reivindicar la publicación de contenidos por nosotros mismos, controlando todo el proceso.</p>
 <p>Las redes sociales son un buen escaparate, pero hay demasiadas cosas que no controlamos:</p>
 <ul>
@@ -633,6 +635,8 @@ code {
 <li>Evita espacios o caracteres especiales en nombres de archivos o carpetas.</li>
 <li>Puedes agregar CSS o imágenes subiéndolos al mismo repositorio.</li>
 <li>Si haces cambios, recuerda <strong>commitear</strong> y luego GitHub actualiza la página automáticamente.</li>
+<li>A veces tarda unos segundos en aparecer la última versión...</li>
+<li></li>
 </ul>
 
 </body>
