--- a/Publica_tu_web_en_GitHub.html
+++ b/Publica_tu_web_en_GitHub.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tutorial: Publicar Página Web en GitHub Pages</title>
+    <title>Tutorial: Publicar Página Web en GitHub Pages v1.4</title>
     <style>
         /* Reset and base styles */
         * {
@@ -159,7 +159,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Tutorial: Cómo Publicar una Página Web en GitHub Pages</h1>
+            <h1>Tutorial: Cómo Publicar una Página Web en GitHub Pages v1.4</h1>
         </header>
         <main>
             <section>
