--- a/Publica_tu_web_en_GitHub.html
+++ b/Publica_tu_web_en_GitHub.html
@@ -431,7 +431,8 @@ code {
 <li>Usa nombres de archivo simples (<code>index.html</code> es la página de inicio por defecto).</li>
 <li>Evita espacios o caracteres especiales en nombres de archivos o carpetas.</li>
 <li>Puedes agregar CSS o imágenes subiéndolos al mismo repositorio.</li>
-<li>Si haces cambios, recuerda <strong>commitear</strong> y luego GitHub actualiza la página automáticamente.</li>
+                    <li>Si haces cambios, recuerda <strong>commitear</strong> y luego GitHub actualiza la página automáticamente.</li>
+                    <li>A veces tarda unos segundos en aparecer la última versión...</li>
 </ul>
             </section>
         </main>
