--- a/Publica_tu_web_en_GitHub.html
+++ b/Publica_tu_web_en_GitHub.html
@@ -153,6 +153,11 @@ a:hover {
                 transform: translateY(0);
             }
 }
+img {
+  width: 500px;
+  height: 50px;
+  margin-left: .5rem;
+}
 </style>
 
 <style>
@@ -266,7 +271,7 @@ code {
 <li><p>En la página principal de GitHub, haz clic en el icono <strong>“+”</strong> (arriba a la derecha) y selecciona <strong>“New repository”</strong>.</p></li>
 <li><p>Configura:</p>
 <ul>
-<li><strong>Repository name:</strong> por ejemplo<code>mi-pagina-web</code></li>
+<li><strong>Repository name:</strong> por ejemplo  <code>mi-pagina-web</code></li>
 <li><strong>Description:</strong> “Tutorial para publicar una página web en GitHub Pages”</li>
 <li><strong>Visibility:</strong> Selecciona <strong>Public</strong> porque queremos que cualquiera pueda ver nuestra página. También podría ser <strong>Private</strong>, pero sólo lo veríamos nosotros.</li>
 <li>Marca la opción <strong>“Add a README file”</strong>, es un fichero que explica el contenido del repositorio.</li>
@@ -325,7 +330,7 @@ code {
 <li>Guarda el fichero con el nombre “index.html”</li>
 </ul></li>
 </ul></li>
-<li><p><strong>Añade el fiecho de estilos CSS</strong>:</p>
+<li><p><strong>Añade el fichero de estilos CSS</strong>:</p>
 <ul>
 <li><p>Crea un nuevo fichero de texto</p></li>
 <li><p>Agrega el siguiente contenido:</p>
@@ -394,7 +399,7 @@ code {
 <p><img src="./images/Activar_GitHub_Pages.png" /></p>
 <hr />
 <h2 id="paso-7-ver-tu-página-web-publicada">✅ PASO 7: Ver tu página web publicada</h2>
-<p>Abre en el navegador el enlace proporcionado por GitHub. Por ejemplo:</p>
+<p>Abre en el navegador el enlace proporcionado por GitHub. Por ejemplo:   </p>
 <pre><code>https://tuusuario.github.io/mi-pagina-web/</code></pre>
 <p>¡Listo! Tu sitio web está <strong>en línea y accesible para cualquiera</strong>.</p>
 <p><img src="./images/github_your_new_web_page_url.png" /></p>
