--- a/Publica_tu_web_en_GitHub.html
+++ b/Publica_tu_web_en_GitHub.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tutorial: Publicar Página Web en GitHub Pages v1.5.2</title>
+    <title>Tutorial: Publicar Página Web en GitHub Pages v1.5.3</title>
 <style>
         /* Reset and base styles */
         * {
@@ -219,7 +219,7 @@ code {
 <body>
     <div class="container">
         <header>
-            <h1>Tutorial: Cómo Publicar una Página Web en GitHub Pages v1.5.2</h1>
+            <h1>Tutorial: Cómo Publicar una Página Web en GitHub Pages v1.5.3</h1>
         </header>
         <main>
             <section>
@@ -398,13 +398,13 @@ code {
 </ul></li>
 <li>Haz clic en <strong>“Save”</strong></li>
 </ol>
-<p><img src="./images/Activar_GitHub_Pages.png" /></p>
+<p><img src="./images/Activar_GitHub_Pages.png" width="800" height="300"/></p>
 <hr />
 <h2 id="paso-7-ver-tu-página-web-publicada">✅ PASO 7: Ver tu página web publicada</h2>
 <p>Abre en el navegador el enlace proporcionado por GitHub. Por ejemplo:   </p>
 <pre><code>https://tuusuario.github.io/mi-pagina-web/</code></pre>
 <p>¡Listo! Tu sitio web está <strong>en línea y accesible para cualquiera</strong>.</p>
-<p><img src="./images/github_your_new_web_page_url.png" /></p>
+<p><img src="./images/github_your_new_web_page_url.png" width="800" height="250"/></p>
 <hr />
 <h2 id="otras-alternativas-gratuitas-a-github-pages">💡 Otras alternativas gratuitas a GitHub Pages</h2>
 <p>Si no quieres usar GitHub o buscas más opciones, aquí tienes algunas:</p>
